--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,7 +1,19 @@
+
+body{
+	font-family: Arial;
+	text-align: center;
+	color: #333;
+	font-size: 16px;
+	margin: 0 ;
+	padding: 0;
+}
 #Container{
 	border: solid 1px  #ddd;
 	text-align: left;
 	width: 70%;
 	padding: 0;
 	margin: 0 auto;
+}
+#Container-titulo{
+	font-size: 30px; 
 }
